--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <small>Impresiones Industriales y Comerciales, Distrito Federal, México.</small>
         </h1>
         <p>
-          Impresos Alfa es una impresora industrial y comercial basada en el
+          Impresos Alfa es una imprenta industrial y comercial basada en el
           Distrito Federal, México. Nuestros precios son competitivos
           y el plazo de entrega se ajusta a la necesidad del cliente.
         </p>
