Add google tracking.

--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
       <div id="nosotros">
         <h2>Nosotros</h2>
         <p>
-          Tenemos más de 50 años de experiencia en el mercado de la impresión. 
-          Nuestro conocimiento ha sido adquirido y perfeccionado a través de este 
-          tiempo y gracias al continuo esfuerzo de movernos al paso con la 
+          Tenemos más de 50 años de experiencia en el mercado de la impresión.
+          Nuestro conocimiento ha sido adquirido y perfeccionado a través de este
+          tiempo y gracias al continuo esfuerzo de movernos al paso con la
           industria.
         </p>
-        <p>Nosotros entendemos que las necesidades de nuestros clientes cambian 
-          continuamente, por eso evolucionamos y nos adaptamos para proveer un 
+        <p>Nosotros entendemos que las necesidades de nuestros clientes cambian
+          continuamente, por eso evolucionamos y nos adaptamos para proveer un
           servicio adecuado y eficiente.</p>
         <p>
-          A todos nuestros clientes orgullosamente les ofrecemos una excelente 
+          A todos nuestros clientes orgullosamente les ofrecemos una excelente
           calidad en la impresión y el mejor servicio en entrega.
         </p>
       </div>
@@ -153,5 +153,15 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.stacktable.js"></script>
     <script src="js/application.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-26741306-4', 'impresos-alfa.com');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
