Add google verification.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Impresos Alfa: Imprenta industrial y comercial basada en el Distrito Federal, México</title>
     <meta name="description" content="Imprenta industrial y comercial basada en el Distrito Federal, México. Excelente calidad de impresion y servicio de entrega. Precios competitivos."/>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
+    <meta name="google-site-verification" content="8or7Rs5vx1MJhbJhsW39091ZnHFtdL_0ZL2TBt0Q9so" />
     <!-- Loading Bootstrap -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- Loading Flat UI -->
